ReorderHabitsDialog: use Java 17 features